--- a/src/output.css
+++ b/src/output.css
@@ -700,6 +700,14 @@ video {
   height: 326px;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[700px\] {
+  height: 700px;
+}
+
 .w-10 {
   width: 2.5rem;
 }
