--- a/src/output.css
+++ b/src/output.css
@@ -612,120 +612,68 @@ video {
   position: sticky;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.top-\[70px\] {
-  top: 70px;
-}
-
-.right-\[\] {
-  right: ;
-}
-
-.right-\[-5\%\] {
-  right: -5%;
-}
-
-.bottom-\[-15\%\] {
-  bottom: -15%;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.right-\[-5\] {
-  right: -5;
-}
-
-.right-\[5\%\] {
-  right: 5%;
-}
-
-.right-\[50\%\] {
-  right: 50%;
-}
-
-.left-\[50\%\] {
-  left: 50%;
-}
-
-.left-\[5\%\] {
-  left: 5%;
-}
-
-.left-\[0\%\] {
-  left: 0%;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[50\] {
-  top: 50;
-}
-
-.top-\[50\%\] {
-  top: 50%;
-}
-
-.top-\[10\%\] {
-  top: 10%;
-}
-
-.top-\[5\%\] {
-  top: 5%;
-}
-
-.bottom-\[\] {
-  bottom: ;
-}
-
-.bottom-\[0\] {
-  bottom: 0;
-}
-
-.bottom-\[0\%\] {
-  bottom: 0%;
+.inset-0 {
+  inset: 0px;
 }
 
 .bottom-\[-10\%\] {
   bottom: -10%;
 }
 
-.right-\[0\%\] {
-  right: 0%;
-}
-
-.right-\[-10\%\] {
-  right: -10%;
-}
-
-.right-\[60\%\] {
-  right: 60%;
+.left-\[65\%\] {
+  left: 65%;
 }
 
 .right-\[65\%\] {
   right: 65%;
 }
 
-.left-\[70\%\] {
-  left: 70%;
+.top-0 {
+  top: 0px;
 }
 
-.left-\[60\%\] {
-  left: 60%;
+.top-\[5\%\] {
+  top: 5%;
 }
 
-.left-\[65\%\] {
-  left: 65%;
+.top-\[70px\] {
+  top: 70px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-\[0\%\] {
+  bottom: 0%;
+}
+
+.bottom-\[0\] {
+  bottom: 0;
+}
+
+.bottom-\[-0\] {
+  bottom: -0;
+}
+
+.bottom-\[-1\%\] {
+  bottom: -1%;
+}
+
+.bottom-\[-12\%\] {
+  bottom: -12%;
+}
+
+.z-0 {
+  z-index: 0;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .z-30 {
@@ -740,12 +688,8 @@ video {
   z-index: 50;
 }
 
-.z-20 {
-  z-index: 20;
-}
-
-.z-0 {
-  z-index: 0;
+.m-4 {
+  margin: 1rem;
 }
 
 .mx-10 {
@@ -773,6 +717,10 @@ video {
   margin-bottom: auto;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mt-\[68px\] {
   margin-top: 68px;
 }
@@ -781,20 +729,20 @@ video {
   margin-top: 97px;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-96 {
+  margin-top: 24rem;
+}
+
 .flex {
   display: flex;
 }
 
 .hidden {
   display: none;
-}
-
-.aspect-\[4\/6\] {
-  aspect-ratio: 4/6;
-}
-
-.aspect-square {
-  aspect-ratio: 1 / 1;
 }
 
 .size-10 {
@@ -807,29 +755,9 @@ video {
   height: 8rem;
 }
 
-.size-5 {
-  width: 1.25rem;
-  height: 1.25rem;
-}
-
 .size-\[200px\] {
   width: 200px;
   height: 200px;
-}
-
-.size-\[200\%\] {
-  width: 200%;
-  height: 200%;
-}
-
-.size-\[100\%\] {
-  width: 100%;
-  height: 100%;
-}
-
-.size-\[50\%\] {
-  width: 50%;
-  height: 50%;
 }
 
 .h-1 {
@@ -856,12 +784,20 @@ video {
   height: 356px;
 }
 
+.h-\[360px\] {
+  height: 360px;
+}
+
 .h-\[700px\] {
   height: 700px;
 }
 
 .h-\[748px\] {
   height: 748px;
+}
+
+.h-\[750px\] {
+  height: 750px;
 }
 
 .h-\[800px\] {
@@ -877,20 +813,20 @@ video {
   height: 1px;
 }
 
-.h-auto {
-  height: auto;
+.h-screen {
+  height: 100vh;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-full {
+  height: 100%;
 }
 
-.h-\[360px\] {
-  height: 360px;
+.max-h-full {
+  max-height: 100%;
 }
 
-.h-\[750px\] {
-  height: 750px;
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-10 {
@@ -926,16 +862,16 @@ video {
   width: 100%;
 }
 
-.w-10\/12 {
-  width: 83.333333%;
+.w-1 {
+  width: 0.25rem;
 }
 
-.w-5\/12 {
-  width: 41.666667%;
+.max-w-xs {
+  max-width: 20rem;
 }
 
-.w-5 {
-  width: 1.25rem;
+.max-w-full {
+  max-width: 100%;
 }
 
 .flex-1 {
@@ -962,11 +898,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.rotate-180 {
-  --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .scale-50 {
   --tw-scale-x: .5;
   --tw-scale-y: .5;
@@ -979,15 +910,21 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.scale-95 {
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .scale-90 {
   --tw-scale-x: .9;
   --tw-scale-y: .9;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.scale-95 {
-  --tw-scale-x: .95;
-  --tw-scale-y: .95;
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -998,21 +935,6 @@ video {
 
 .scale-x-\[-1\] {
   --tw-scale-x: -1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-x-\[-1\%\] {
-  --tw-scale-x: -1%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-scale-x-\[-1\] {
-  --tw-scale-x: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-scale-x-\[100\] {
-  --tw-scale-x: -100;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1088,12 +1010,8 @@ video {
   gap: 42rem;
 }
 
-.gap-\[200px\] {
-  gap: 200px;
-}
-
-.gap-\[\] {
-  gap: ;
+.gap-\[rem\] {
+  gap: rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1102,16 +1020,16 @@ video {
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
-.self-center {
-  align-self: center;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
 .text-pretty {
   text-wrap: pretty;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-\[18px\] {
@@ -1130,9 +1048,22 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded-t-full {
   border-top-left-radius: 9999px;
   border-top-right-radius: 9999px;
+}
+
+.rounded-t-\[32px\] {
+  border-top-left-radius: 32px;
+  border-top-right-radius: 32px;
 }
 
 .border {
@@ -1141,18 +1072,6 @@ video {
 
 .border-\[10px\] {
   border-width: 10px;
-}
-
-.border-8 {
-  border-width: 8px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-4 {
-  border-width: 4px;
 }
 
 .border-t-2 {
@@ -1179,9 +1098,29 @@ video {
   background-color: rgb(198 234 227 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .bg-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(46 80 112 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 .bg-green {
@@ -1199,24 +1138,18 @@ video {
   background-color: rgb(237 248 249 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-black {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 
 .bg-\[url\(\'\/public\/img\/big-cat-img\.jpg\'\)\] {
@@ -1268,6 +1201,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -1276,6 +1213,11 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5 {
@@ -1318,14 +1260,9 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.px-40 {
-  padding-left: 10rem;
-  padding-right: 10rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-16 {
@@ -1344,12 +1281,8 @@ video {
   padding-top: 8rem;
 }
 
-.ps-96 {
-  padding-inline-start: 24rem;
-}
-
-.pe-6 {
-  padding-inline-end: 1.5rem;
+.text-center {
+  text-align: center;
 }
 
 .text-end {
@@ -1425,6 +1358,11 @@ video {
   color: rgb(46 80 112 / var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .text-sky-900 {
   --tw-text-opacity: 1;
   color: rgb(12 74 110 / var(--tw-text-opacity));
@@ -1433,6 +1371,17 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-green {
+  --tw-text-opacity: 1;
+  color: rgb(149 187 111 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .drop-shadow-\[0_6px_18px_rgba\(0\2c 0\2c 0\2c 5\%\)\] {
@@ -1444,14 +1393,67 @@ video {
   transition-duration: 300ms;
 }
 
+.nav-toggle {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 22px;
+  width: 40px;
+}
+
+.nav-toggle .bar {
+  height: 3px;
+  width: 100%;
+  transition: all 100ms ease-in-out;
+}
+
+.nav-toggle:hover {
+  cursor: pointer;
+}
+
+.x:nth-of-type(1) {
+  transition: all 100ms ease-in-out;
+  transform: rotate(45deg);
+  transform-origin: top left;
+  width: 28px;
+}
+
+.x:nth-of-type(2) {
+  transition: all 100ms ease-in-out;
+  transform-origin: center;
+  width: 0;
+}
+
+.x:nth-of-type(3) {
+  transition: all 100ms ease-in-out;
+  transform: rotate(-45deg);
+  transform-origin: bottom left;
+  width: 28px;
+}
+
 .hover\:-translate-y-2:hover {
   --tw-translate-y: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-cyan-950:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 51 68 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-lime-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(77 124 15 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .hover\:transition:hover {
@@ -1467,9 +1469,10 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
+  .sm\:scale-50 {
+    --tw-scale-x: .5;
+    --tw-scale-y: .5;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 }
 
@@ -1480,14 +1483,6 @@ video {
 
   .md\:invisible {
     visibility: hidden;
-  }
-
-  .md\:left-\[15\%\] {
-    left: 15%;
-  }
-
-  .md\:right-\[15\%\] {
-    right: 15%;
   }
 
   .md\:hidden {
@@ -1507,12 +1502,8 @@ video {
     width: 14rem;
   }
 
-  .md\:w-3\/12 {
-    width: 25%;
-  }
-
-  .md\:w-6\/12 {
-    width: 50%;
+  .md\:flex-1 {
+    flex: 1 1 0%;
   }
 
   .md\:scale-100 {
@@ -1527,9 +1518,9 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .md\:scale-50 {
-    --tw-scale-x: .5;
-    --tw-scale-y: .5;
+  .md\:scale-110 {
+    --tw-scale-x: 1.1;
+    --tw-scale-y: 1.1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -1546,21 +1537,6 @@ video {
     padding-right: 2.5rem;
   }
 
-  .md\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .md\:px-40 {
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
-
-  .md\:px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-
   .md\:text-\[56px\] {
     font-size: 56px;
   }
@@ -1571,14 +1547,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:left-1\/4 {
-    left: 25%;
-  }
-
-  .lg\:right-\[-15\%\] {
-    right: -15%;
-  }
-
   .lg\:w-4\/12 {
     width: 33.333333%;
   }
@@ -1587,26 +1555,20 @@ video {
     width: 560px;
   }
 
-  .lg\:w-2\/6 {
-    width: 33.333333%;
-  }
-
-  .lg\:w-8\/12 {
-    width: 66.666667%;
-  }
-
   .lg\:scale-90 {
     --tw-scale-x: .9;
     --tw-scale-y: .9;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .lg\:flex-row {
-    flex-direction: row;
+  .lg\:scale-110 {
+    --tw-scale-x: 1.1;
+    --tw-scale-y: 1.1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .lg\:justify-end {
-    justify-content: flex-end;
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:px-64 {
@@ -1635,28 +1597,12 @@ video {
   .xl\:flex-row {
     flex-direction: row;
   }
-
-  .xl\:px-44 {
-    padding-left: 11rem;
-    padding-right: 11rem;
-  }
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:scale-0 {
-    --tw-scale-x: 0;
-    --tw-scale-y: 0;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .\32xl\:scale-100 {
     --tw-scale-x: 1;
     --tw-scale-y: 1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\32xl\:px-72 {
-    padding-left: 18rem;
-    padding-right: 18rem;
   }
 }
